--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -50,7 +50,7 @@
                             This was made in Blender to get initial values for the scene.
                         </p>
                         <h4>Scene Settings</h4>
-                        <b>Camera</b> - FOV: 60, Position: (0.5, -5, 3), Rotation: (0, 0, 0), Near Plane: 0.1
+                        <b>Camera</b> - FOV: 60, Position: (0.5, -5, 3), Rotation: (0, 0, 0), Near Plane: 0.1, Look-At: (0.5, 2, 3)
                         <br>
                         <b>Light</b> - Position: (-0.1, -1, 7), Power in picture: 1000 W, Radius: 0.1
                         <br>
@@ -63,7 +63,7 @@
                         <h4>Scene Setup in OpenGL</h4>
                         <img class="img-fluid" src="../../assets/img/base_setup_opengl.png" alt="..." />
                         <p class="text-black-50">
-                            Using the values above, the scene was also setup in OpenGL (no lighting).
+                            Using the values above, the scene was also setup in OpenGL (no lighting). For a simple mapping, the y and -z values are swapped in the values above due to OpenGL's preferred orientation.
                         </p>
                     </div>
                 </div>
