Added to checkpoint 1

--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -50,7 +50,7 @@
                             This was made in Blender to get initial values for the scene.
                         </p>
                         <h4>Scene Settings</h4>
-                        <b>Camera</b> - FOV: 60, Position: (0.5, -5, 3), Rotation: (0, 0, 0), Near Plane: 0.1, Look-At: (0.5, 2, 3)
+                        <b>Camera</b> - FOV: 60, Position: (0.5, -5, 3), Rotation: (0, 0, 0), Near Plane: 0.1, Look-At: (0.5, 2, 3), Aspect: 1
                         <br>
                         <b>Light</b> - Position: (-0.1, -1, 7), Power in picture: 1000 W, Radius: 0.1
                         <br>
