--- a/html/Project/main.html
+++ b/html/Project/main.html
@@ -13,35 +13,64 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../../css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">CSCI-711</a>
+                <a class="navbar-brand" href="../../index.html">CSCI-711</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="./html/RayTracer/main.html">RayTracer</a></li>
-                        <li class="nav-item"><a class="nav-link" href="html/Project/main.html">Project</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../RayTracer/main.html">RayTracer</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./main.html">Project</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead">
+        <!-- Masthead Project -->
+        <header class="masthead_project">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Global Illumination</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">CSCI-711 Project</h1>
+                        <a class="btn btn-primary" href="#proposal">Proposal</a>
                     </div>
                 </div>
             </div>
         </header>
+        <!-- Proposal -->
+        <section class="about-section text-center" id="proposal">
+            <div class="container px-4 px-lg-5 d-flex h-100">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8">
+                        <h1>Proposal</h1>
+                        <br>
+                        <b>Idea</b> - Procedural tree (or plant) generation via L-Systems using OpenGL compute shaders
+                        <br>
+                        <p class="text-black-50">The goal is to use OpenGL compute shaders to procedurally generate trees. My initial idea is to use
+                            L-Systems for the procedural generation. Since the challenge of this unknown, there are options to add 
+                            such as including a GUI to alter generation parameters on the fly (probably using ImGui for the GUI library), 
+                            enhance procedurally generated texture quality, and add scene real-time camera interactivity as needed. 
+                        </p>
+                        <b>Team Members</b> - None
+                        <br>
+                        <b>Project Components</b> - OpenGL with GLEW and GLFW, possibly GLM for the math library (may use custom library), and ImGui for the GUI library if needed
+                        <b>Timeline</b> - Generate L-System and draw at least in 2D the generated trees (Mid-point review)
+                        <b>Final Presentation</b> - This will be a powerpoint with snippets and possible videos demoing the project
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Proposal -->
+        <section class="about-section text-center" id="proposal">
+            <div class="container px-4 px-lg-5 d-flex h-100">
+            </div>
+        </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
