--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -24,6 +24,12 @@
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="./main.html">RayTracer</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Project/main.html">Project</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <!-- Masthead Raytrace-->
