Moved to markdown

--- a/html/Project/main.html
+++ b/html/Project/main.html
@@ -45,14 +45,16 @@
                 </div>
             </div>
         </header>
+        <!-- Updates go here -->
         <!-- Proposal -->
-        <section class="about-section" id="checkpoint1">
+        <section class="about-section" id="proposal">
             <div class="container px-4 px-lg-5 d-flex h-100">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <md-block src="../../markdown/Project/proposal.md"></md-block> <!-- End Proposal -->
                 </div>
             </div>
         </section>
+        <!-- /Proposal -->
         <section class="about-section text-center" id="proposal">
             <div class="container px-4 px-lg-5 d-flex h-100">
             </div>
