--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -47,33 +47,10 @@
         </header>
         <!-- Each Update goes here -->
         <!-- Checkpoint 1-->
-        <section class="about-section text-center" id="checkpoint1">
+        <section class="about-section" id="checkpoint1">
             <div class="container px-4 px-lg-5 d-flex h-100">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h1>Checkpoint 1</h1>
-                        <br>
-                        <img class="img-fluid" src="../../assets/img/assignment1.png" alt="..." />
-                        <p class="text-black-50">
-                            This was made in Blender to get initial values for the scene.
-                        </p>
-                        <h4>Scene Settings</h4>
-                        <b>Camera</b> - FOV: 60, Position: (0.5, -5, 3), Rotation: (0, 0, 0), Near Plane: 0.1, Look-At: (0.5, 2, 3), Aspect: 1
-                        <br>
-                        <b>Light</b> - Position: (-0.1, -1, 7), Power in picture: 1000 W, Radius: 0.1
-                        <br>
-                        <b>Plane</b> - Position: (-1.5, 30, 0), Scale: (10, 32, 1) 
-                        <br>
-                        <b>Purple Sphere</b> - Position: (-1.5, 5, 2), Scale: (1, 1, 1)
-                        <br>
-                        <b>Green Sphere</b> - Position: (0.5, 2, 3), Scale: (1.2, 1.2, 1.2)
-                        <br><br><br>
-                        <h4>Scene Setup in OpenGL</h4>
-                        <img class="img-fluid" src="../../assets/img/base_setup_opengl.png" alt="..." />
-                        <p class="text-black-50">
-                            Using the values above, the scene was also setup in OpenGL (no lighting). For a simple mapping, the y and -z values are swapped in the values above due to OpenGL's preferred orientation.
-                        </p>
-                    </div>
+                    <md-block src="../../markdown/RayTracer/checkpoint1.md"></md-block> <!-- End Proposal -->
                 </div>
             </div>
         </section>
