--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -40,7 +40,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">RayTracing Project</h1>
-                        <a class="btn btn-primary" href="#checkpoint2">Checkpoint 2</a>
+                        <a class="btn btn-primary" href="#checkpoint3">Checkpoint 2</a>
                     </div>
                 </div>
             </div>
@@ -59,6 +59,14 @@
             <div class="container px-4 px-lg-5 d-flex h-100">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <md-block src="../../markdown/RayTracer/checkpoint2.md"></md-block> <!-- End Proposal -->
+                </div>
+            </div>
+        </section>
+        <!-- Checkpoint 3-->
+        <section class="about-section" id="checkpoint3">
+            <div class="container px-4 px-lg-5 d-flex h-100">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <md-block src="../../markdown/RayTracer/checkpoint3.md"></md-block> <!-- End Proposal -->
                 </div>
             </div>
         </section>
