Added midphase update

--- a/html/Project/main.html
+++ b/html/Project/main.html
@@ -40,7 +40,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">CSCI-711 Project</h1>
-                        <a class="btn btn-primary" href="#proposal">Proposal</a>
+                        <a class="btn btn-primary" href="#midphase">Mid-Phase Update</a>
                     </div>
                 </div>
             </div>
@@ -55,6 +55,15 @@
             </div>
         </section>
         <!-- /Proposal -->
+        <!-- Mid-Phase Update -->
+        <section class="about-section" id="midphase">
+            <div class="container px-4 px-lg-5 d-flex h-100">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <md-block src="../../markdown/Project/midphase_update.md"></md-block> <!-- End Proposal -->
+                </div>
+            </div>
+        </section>
+        <!-- /Mid-Phase Update -->
         <section class="about-section text-center" id="proposal">
             <div class="container px-4 px-lg-5 d-flex h-100">
             </div>
