--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>CSCI711 - Global Illumination</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <!-- Fohttps://en.wikipedia.org/wiki/L-systemnt Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Markdown embedding library -->
         <script type="module" src="https://md-block.verou.me/md-block.js"></script>
