--- a/html/RayTracer/main.html
+++ b/html/RayTracer/main.html
@@ -86,6 +86,14 @@
                 </div>
             </div>
         </section>
+        <!-- Checkpoint 6-->
+        <section class="about-section" id="checkpoint6">
+            <div class="container px-4 px-lg-5 d-flex h-100">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <md-block src="../../markdown/RayTracer/checkpoint6.md"></md-block> <!-- End Proposal -->
+                </div>
+            </div>
+        </section>
         <!-- Extra Spacing-->
         <section class="about-section text-center" id="checkpoint1">
             <div class="container px-4 px-lg-5 d-flex h-100">
